--- a/web/src/less/UserView.less
+++ b/web/src/less/UserView.less
@@ -6,23 +6,31 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: rgba(255, 255, 255, 0.62);
+  background-color: rgba(199, 199, 199, 0.62);
   backdrop-filter: blur(10px);
   border-radius: 10px;
 
+
   .left-item {
+    display: flex;
     font-size: 24px;
     font-family: AFKYS;
-    color: #3f3f3f;
+    color: #ffffff;
     max-width: 80%;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
+    align-items: baseline;
+
+    .user-name {
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
 
     .link {
+      white-space: nowrap;
       margin-left: 20px;
     }
   }
+
 
   .btn {
     white-space: nowrap;
@@ -46,7 +54,7 @@
   padding: 10px 30px;
   width: 80%;
   min-height: 500px;
-  background-color: rgba(255, 255, 255, 0.62);
+  background-color: rgba(168, 168, 168, 0.62);
   backdrop-filter: blur(10px);
   border-radius: 10px;
 
@@ -88,14 +96,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      object-fit: cover;
 
-      img {
-        border-radius: 10px;
-        width: 100%;
-        height: 100%;
-
-      }
     }
 
     .mask {
@@ -109,11 +110,8 @@
       font-size: 16px;
       color: #2a2a2a;
       font-family: AFKYS;
-
-      &:hover {
-        background-color: #FFFFFF99;
-        backdrop-filter: blur(10px);
-      }
+      background-color: #FFFFFF99;
+      backdrop-filter: blur(10px);
 
       .to-detail {
         text-align: right;
@@ -133,8 +131,8 @@
       position: relative;
       margin: 5px;
       padding: 5px;
-      width: 200px;
-      height: 150px;
+      width: 150px;
+      height: 130px;
     }
 
 
